syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

option go_package = ".;proto";

service UserService {
    rpc SignUp(UserEditRequest) returns (BaseResponse);
    rpc Login(UserLoginRequest) returns (BaseResponse);
    rpc EditUser(UserEditRequest) returns (BaseResponse);
    rpc DeleteUser(UserIdRequest) returns (BaseResponse);
    rpc GetUser(UserIdRequest) returns (BaseResponse);
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserEditRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message UserIdRequest {
    int32 id = 1;
}

message UserResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string token = 5;
    int32	RoleId = 6;
    string Role = 7;
    google.protobuf.Timestamp CreatedAt = 8;
    google.protobuf.Timestamp UpdatedAt = 9;
}

message BaseResponse {
  string message = 1;
  UserResponse user = 2;
}

service BorrowRecordsService {
    rpc AddBorrowRecords(BorrowRecordsRequest) returns (BaseResponseBorrowRecords);
    rpc EditBorrowRecords(BorrowRecordsRequest) returns (BaseResponseBorrowRecords);
    rpc DeleteBorrowRecords(BorrowRecordsIdRequest) returns (BaseResponseBorrowRecords);
    rpc GetBorrowRecords(BorrowRecordsIdRequest) returns (BaseResponseBorrowRecords);
}

message BorrowRecordsRequest {
    int32 id = 1;
    int32 userId = 2;
    int32 bookId = 3;
    google.protobuf.Timestamp borrowDate = 4;
    google.protobuf.Timestamp returnDate = 5;
    bool isReturn = 6;
}

message BorrowRecordsIdRequest {
    int32 id = 1;
}

message BorrowRecordsResponse {
    int32 id = 1;
    int32 userId = 2;
    int32 bookId = 3;
    google.protobuf.Timestamp borrowDate = 4;
    google.protobuf.Timestamp returnDate = 5;
    bool isReturn = 6;
    google.protobuf.Timestamp CreatedAt = 7;
    google.protobuf.Timestamp UpdatedAt = 8;
}

message BaseResponseBorrowRecords {
  string message = 1;
  BorrowRecordsResponse borrowrecords = 2;
}